# python_koans_replit

./: .replit  pyproject.toml
python3/koans/: about_asserts.py  about_lists.py  about_string_manipulation.py  about_strings.py
